    which serves as a generic gateway to
    introspection into mappers, objects,
    others.   The Mapper and InstanceState
    objects have been enhanced with a public
    API that allows inspection of mapped 
    attributes, including filters for column-bound
    or relationship-bound properties, inspection
    of current object state, history of
    attributes, etc.  [ticket:2208]

  - [bug] The "passive" flag on Session.is_modified()
    no longer has any effect. is_modified() in 
    all cases looks only at local in-memory
    modified flags and will not emit any
    SQL or invoke loader callables/initializers.  
    [ticket:2320]

  - [bug] The warning emitted when using 
    delete-orphan cascade with one-to-many
    or many-to-many without single-parent=True
    is now an error.  The ORM
    would fail to function subsequent to this
    warning in any case.  [ticket:2405]

  - [feature] Query now "auto correlates" by 
    default in the same way as select() does.
    Previously, a Query used as a subquery
    in another would require the correlate()
    method be called explicitly in order to 
    correlate a table on the inside to the
    outside.  As always, correlate(None)
    disables correlation.  [ticket:2179]

  - [feature] Added prefix_with() method
    to Query, calls upon select().prefix_with()
    to allow placement of MySQL SELECT
    directives in statements.  Courtesy
    Diana Clarke [ticket:2443]
    also in 0.7.7.

  - [bug] Fixed bug in 0.7.6 introduced by 
    [ticket:2409] whereby column_mapped_collection
    used against columns that were mapped as
    joins or other indirect selectables
    would fail to function.
    also in 0.7.7.

  - [feature] Added new flag to @validates
    include_removes.  When True, collection
    remove and attribute del events
    will also be sent to the validation function,
    which accepts an additional argument
    "is_remove" when this flag is used.
    also in 0.7.7.
